--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -8,6 +8,7 @@
         "inlineSources": true,
         "declaration": true,
         "strict": true,
+        "exactOptionalPropertyTypes": true,
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
         "importHelpers": true,
