--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@wonder/core-native",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "main": "lib/index.js",
     "module": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -12,7 +12,8 @@
     "scripts": {
         "build": "node script/build.js",
         "test": "jest --config config/jest.json",
-        "format": "prettier --config config/prettier.json --write \"{src,test,script,config}/**/*.{js,ts,tsx,json}\""
+        "format": "prettier --config config/prettier.json --write \"{src,test,script,config}/**/*.{js,ts,tsx,json}\"",
+        "deploy": "node script/publish.js"
     },
     "devDependencies": {
         "@types/jest": "27.0.2",
