--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@wonder/core-native",
-    "version": "1.3.1",
+    "version": "1.4.0-beta.1",
     "main": "lib/index.js",
     "module": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -19,6 +19,7 @@
     "devDependencies": {
         "@types/jest": "29.5.11",
         "@types/node": "20.10.4",
+        "@types/uuid": "9.0.8",
         "@typescript-eslint/eslint-plugin": "6.14.0",
         "@typescript-eslint/parser": "6.14.0",
         "eslint": "8.55.0",
@@ -26,6 +27,7 @@
         "fs-extra": "11.2.0",
         "jest": "29.7.0",
         "prettier": "3.1.1",
+        "react-native-mmkv": "2.12.1",
         "ts-jest": "29.1.1",
         "typescript": "5.3.3",
         "yargs": "17.7.2"
@@ -36,15 +38,18 @@
         "@types/react-redux": "7.1.33",
         "immer": "10.0.3",
         "react": "18.2.0",
+        "react-native-get-random-values": "1.11.0",
         "react-redux": "7.2.8",
         "redux": "4.1.2",
         "redux-saga": "1.1.3",
-        "tslib": "2.6.2"
+        "tslib": "2.6.2",
+        "uuid": "9.0.1"
     },
     "peerDependencies": {
         "react": ">=18.0.0",
         "react-dom": ">=18.0.0",
-        "react-native": "*"
+        "react-native": "*",
+        "react-native-mmkv": "^2.12.1"
     },
     "engines": {
         "node": ">=18"
