--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
         "react-redux": "7.2.8",
         "redux": "4.1.2",
         "redux-saga": "1.1.3",
-        "tslib": "2.6.2"
+        "tslib": "2.6.2",
+        "uuid": "^9.0.1"
     },
     "peerDependencies": {
         "react": ">=18.0.0",
