--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "moduleResolution": "Bundler",
         "types": ["node"],
         "jsx": "react-native",
-        "lib": ["es2017", "esnext"]
+        "lib": ["es2017", "esnext"],
+        "esModuleInterop": true,
     },
     "include": ["src"],
     "references": [{"path": "./test/tsconfig.json"}]
