--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
         "redux": "4.1.2",
         "redux-saga": "1.1.3",
         "tslib": "2.6.2",
-        "uuid": "9.0.1"
+        "uuid": "9.0.1",
+        "zustand": "4.5.2"
     },
     "peerDependencies": {
         "react": ">=18.0.0",
