--- a/example/package.json
+++ b/example/package.json
@@ -1,52 +1,55 @@
 {
-  "name": "example",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest"
-  },
-  "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.74.1",
-    "@wonder/core-native": "file:../src",
-    "immer": "10.0.3",
-    "zustand": "4.5.2",
-    "react-native-get-random-values": "1.11.0",
-    "tslib": "2.6.2",
-    "uuid": "9.0.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.74.83",
-    "@react-native/eslint-config": "0.74.83",
-    "@react-native/metro-config": "0.74.83",
-    "@react-native/typescript-config": "0.74.83",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4",
-    "@types/jest": "29.5.11",
-    "@types/node": "20.10.4",
-    "@types/uuid": "9.0.8",
-    "@typescript-eslint/eslint-plugin": "6.14.0",
-    "@typescript-eslint/parser": "6.14.0",
-    "eslint-config-prettier": "9.1.0",
-    "fs-extra": "11.2.0",
-    "react-native-mmkv": "2.12.1",
-    "ts-jest": "29.1.1",
-    "yargs": "17.7.2"
-  },
-  "engines": {
-    "node": ">=18"
-  }
+    "name": "example",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "android": "react-native run-android",
+        "ios": "react-native run-ios",
+        "lint": "eslint .",
+        "start": "react-native start",
+        "test": "jest"
+    },
+    "dependencies": {
+        "@react-navigation/native": "^6.1.17",
+        "@react-navigation/native-stack": "^6.9.26",
+        "@wonder/core-native": "file:../src",
+        "immer": "10.0.3",
+        "react": "18.2.0",
+        "react-native": "0.74.1",
+        "react-native-get-random-values": "1.11.0",
+        "react-native-reanimated": "^3.11.0",
+        "react-native-safe-area-context": "^4.10.1",
+        "react-native-screens": "^3.31.1",
+        "tslib": "2.6.2",
+        "uuid": "9.0.1",
+        "zustand": "4.5.2"
+    },
+    "devDependencies": {
+        "@babel/plugin-proposal-decorators": "^7.24.6",
+        "@react-native/eslint-config": "0.74.83",
+        "@react-native/metro-config": "0.74.83",
+        "@react-native/typescript-config": "0.74.83",
+        "@types/jest": "29.5.11",
+        "@types/node": "20.10.4",
+        "@types/react": "^18.2.6",
+        "@types/react-test-renderer": "^18.0.0",
+        "@types/uuid": "9.0.8",
+        "@typescript-eslint/eslint-plugin": "6.14.0",
+        "@typescript-eslint/parser": "6.14.0",
+        "babel-plugin-transform-decorators-legacy": "^1.3.5",
+        "eslint": "^8.19.0",
+        "eslint-config-prettier": "9.1.0",
+        "fs-extra": "11.2.0",
+        "jest": "^29.6.3",
+        "metro-react-native-babel-preset": "^0.77.0",
+        "prettier": "2.8.8",
+        "react-native-mmkv": "2.12.1",
+        "react-test-renderer": "18.2.0",
+        "ts-jest": "29.1.1",
+        "typescript": "5.0.4",
+        "yargs": "17.7.2"
+    },
+    "engines": {
+        "node": ">=18"
+    }
 }
