--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -33,6 +33,6 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     // Causes issues with package.json "exports"
-    "forceConsistentCasingInFileNames": false
+    "forceConsistentCasingInFileNames": false,
   },
 }
