--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "dependencies": {
         "@types/react": "18.2.45",
         "@types/react-native": "0.72.8",
-        "@wonder/core-core": "^0.1.2",
+        "@wonder/core-core": "0.1.16",
         "immer": "10.0.3",
         "react": "18.2.0",
         "react-native-get-random-values": "1.11.0",
